--- a/DESeq2/Dockerfile
+++ b/DESeq2/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get update --fix-missing \
 && cd /usr/local/ \
 && wget https://bioconductor.org/packages/release/bioc/src/contrib/DESeq2_1.36.0.tar.gz \
 && tar xzvf DESeq2_1.36.0.tar.gz  \
-&& cp DESeq2/DESeq2 /usr/local/bin \
-&& chmod +x /usr/local/bin/DESeq2_1 \
+&& cp -r DESeq2 /usr/local/bin \
+&& chmod +x /usr/local/bin/DESeq2 \
 && rm DESeq2_1.36.0.tar.gz   \
 && rm -rf DESeq2
 
