--- a/STAR/Dockerfile
+++ b/STAR/Dockerfile
@@ -1,19 +1,27 @@
 FROM ubuntu:22.04
 	
+	ARG STAR_VERSION=2.7.10a
 	
-RUN apt-get update --fix-missing \
-&& apt-get install -y wget build-essential bzip2 cmake default-jdk git libnss-sss libtbb2 libtbb-dev ncurses-dev unzip zlib1g zlib1g-dev \
-&& cd /usr/local/ \
-&& wget https://github.com/alexdobin/STAR/archive/2.7.10a.tar.gz \
-&& tar -xzvf 2.7.10a.tar.gz \
-&& rm -rf 2.7.10a.tar.gz  \
-&& cp -r STAR-2.7.10a /usr/local/bin \
-&& chmod +x /usr/local/bin/STAR-2.7.10a \
-&& rm -rf 2.7.0f.tar.gz  \
-&& apt-get autoremove -y  \
-&& apt-get autoclean -y \
-&& apt-get clean
+	ENV PACKAGES gcc g++ make wget zlib1g-dev 
+	
+	RUN set -ex
+	
+	RUN apt-get update && \
+	    apt-get install -y --no-install-recommends ${PACKAGES} && \
+	    apt-get clean && \
+	    g++ --version && \
+	    cd /home && \
+	    wget --no-check-certificate https://github.com/alexdobin/STAR/archive/2.7.10a.tar.gz && \
+	    tar -xzvf ${STAR_VERSION}.tar.gz && \
+	    cd STAR-${STAR_VERSION}/source && \
+	    make STARstatic && \
+	    mkdir /home/bin && \
+	    cp STAR /home/bin && \
+	    cd /home && \
+	    'rm' -rf STAR-${STAR_VERSION} && \
+	    apt-get --purge autoremove -y  ${PACKAGES}
+	
+	ENV PATH /home/bin:${PATH}
 
-ENTRYPOINT ["/usr/local/bin/STAR-2.7.10a"]
 	
-	
+
