--- a/subread/DockerFile
+++ b/subread/DockerFile
@@ -1,13 +1,29 @@
-# base image : ubuntu
-FROM ubuntu:22.04
-RUN apt-get update --fix-missing \
-&& apt-get install -y wget \
-&& cd /usr/local/ \
-&& wget https://sourceforge.net/projects/subread/files/subread-2.0.3/subread-2.0.3-Linux-x86_64.tar.gz \
-&& tar -xzvf subread-2.0.3-Linux-x86_64.tar.gz \
-&& cp -r subread-2.0.3-Linux-x86_64 /usr/local/bin \
-&& chmod +x /usr/local/bin/subread-2.0.3-Linux-x86_64 \
-&& rm subread-2.0.3-Linux-x86_64.tar.gz \
-&& rm -rf subread-2.0.3-Linux-x86_64
+#Use an official Ubuntu runtime as a parent image
+FROM ubuntu:latest
 
-ENTRYPOINT ["/usr/local/bin/subread"]
+#MAINTAINER ConYel <https://github.com/ConYel>
+
+# Set the working directory to /home
+WORKDIR /home
+
+#set User ROOT
+USER root
+
+# config issues about region and time
+RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
+
+RUN apt-get update -y \
+        && apt-get install -y --no-install-recommends \
+        build-essential \
+        software-properties-common \
+        apt-utils \
+        nano \
+        git \
+  unzip \
+  wget \
+        locales \
+        && locale-gen en_US.UTF-8 \
+        && wget -O subread.tar.gz https://downloads.sourceforge.net/project/subread/subread-2.0.0/subread-2.0.0-Linux-x86_64.tar.gz \
+        && tar zxvf subread.tar.gz \
+        && rm subread.tar.gz \
+        && ln -sf /home/subread-2.0.0-Linux-x86_64/bin/* /usr/local/bin/
