--- a/nextflow.config
+++ b/nextflow.config
@@ -9,4 +9,11 @@ process {
         cpus=6
         memory=20.GB
     }
+    withName: 'index' {
+        container = 'clarpalmtree/starbis:latest'
+        cpus=6
+        memory=40.GB
+    }
+
+
 }
