--- a/nextflow.config
+++ b/nextflow.config
@@ -4,16 +4,35 @@ docker {
 }
 
 process {
+    executor='local'
+    scratch=false
+    maxRetries=1
+    errorStrategy='retry'
+    
+    withName: 'getSRAIDs' {
+        cpus=2
+        memory=20.GB
+    }
+    
     withName: 'fastqDump' {
         container = 'clarpalmtree/sra:latest'
         cpus=6
         memory=20.GB
     }
+    
+    withName: 'chromosome' {
+        cpus=6
+        memory=40.GB
+    }
+    
+    withName: 'getAnnot' {
+        cpus=1
+    }
+    
     withName: 'index' {
         container = 'clarpalmtree/starbis:latest'
         cpus=6
         memory=40.GB
     }
-
 
 }
