--- a/nextflow.config
+++ b/nextflow.config
@@ -8,10 +8,11 @@ process {
     scratch=false
     maxRetries=1
     errorStrategy='retry'
-    
+
     withName: 'getSRAIDs' {
+        container = 'pegi3s/entrez-direct'
         cpus=2
-        memory=20.GB
+        memory=5.GB
     }
     
     withName: 'fastqDump' {
