config_parameters_changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,3 @@
-
 docker {
     enabled = true
 }
@@ -11,29 +10,27 @@ process {
 
     withName: 'getSRAIDs' {
         container = 'pegi3s/entrez-direct'
-        cpus=2
-        memory=5.GB
-    }
-    
-    withName: 'fastqDump' {
-        container = 'clarpalmtree/sra:latest'
         cpus=6
-        memory=20.GB
+        memory=8.GB
     }
-    
+
+    withName: 'fastqDump' {
+        container = 'clarpalmtree/sra'
+    }
+
     withName: 'chromosome' {
         cpus=6
-        memory=40.GB
+        memory=30.GB
     }
-    
+
     withName: 'getAnnot' {
         cpus=1
     }
-    
+
     withName: 'index' {
         container = 'clarpalmtree/starbis:latest'
         cpus=6
-        memory=40.GB
+        memory=30.GB
     }
 
 }
