--- a/nextflow.config
+++ b/nextflow.config
@@ -32,5 +32,11 @@ process {
         cpus=6
         memory=30.GB
     }
+    
+    withName: 'mapping' {
+        container = 'clarpalmtree/starbis:latest'
+        cpus=6
+        memory=30.GB
+    }
 
 }
