--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ process {
         container = 'clarpalmtree/sra'
     }
 
-    withName: 'chromosome' {
+    withName: 'getGenome' {
         cpus=6
         memory=30.GB
     }
