--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,10 @@ process {
         container = 'clarpalmtree/sra'
         cpus=8
     }
+    
+    withName: 'getGenome' {
+        cpus=2
+    }
 
     withName: 'index' {
         container = 'clarpalmtree/starbis:latest'
