--- a/nextflow.config
+++ b/nextflow.config
@@ -30,5 +30,9 @@ process {
         container = 'clarpalmtree/starbis:latest'
         cpus=16
     }
+    withName: 'featureCounts' {
+        container = 'docker pull yanismadi/subread:latest'
+        cpus=16
+    }
 
 }
