--- a/nextflow.config
+++ b/nextflow.config
@@ -26,10 +26,16 @@ process {
         cpus=16
     }
     
-    withName: 'mapping' {
+    withName: 'mapping_bam' {
         container = 'clarpalmtree/starbis:latest'
         cpus=16
     }
+    
+    withName: 'mapping_bai' {
+        container = 'clarpalmtree/samtools:v1.9'
+        cpus=16
+    }
+    
     withName: 'featureCounts' {
         container = 'docker pull yanismadi/subread:latest'
         cpus=16
