--- a/nextflow.config
+++ b/nextflow.config
@@ -26,7 +26,7 @@ process {
         cpus=16
     }
     
-    withName: 'mapping_bam' {
+    withName: 'mapping' {
         container = 'clarpalmtree/starbis:latest'
         cpus=16
     }
