--- a/nextflow.config
+++ b/nextflow.config
@@ -37,7 +37,7 @@ process {
     }
     
     withName: 'featureCounts' {
-        container = 'docker pull yanismadi/subread:latest'
+        container = 'yanismadi/subread:latest'
         cpus=16
     }
 
