--- a/nextflow.config
+++ b/nextflow.config
@@ -39,5 +39,9 @@ process {
         container = 'yanismadi/subread:latest'
         cpus=4
     }
+    
+    withName: 'stat_analysis' {
+        container = 'siwarhm/dseq2:latest'
+        cpus=4
 
 }
