--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ process {
     }
     
     withName: 'mapping_bai' {
-        container = 'evolbioinfo/samtools'
+        container = 'yanismadi/samtools:latest'
         cpus=16
     }
     
