--- a/Containers/dseq/DockerFile
+++ b/Containers/dseq/DockerFile
@@ -1,10 +1,7 @@
 # R + DESeq
-# https://cran.r-project.org/
-# v4.0.2 / v1.39.0
-FROM r-base:4.0.2
+FROM r-base:4.1.1
 
 RUN apt-get update && apt-get install -y procps libssl-dev libcurl4-gnutls-dev curl git libopenmpi-dev openmpi-bin openmpi-doc libxm>    && R -e 'if (!requireNamespace("BiocManager", quietly = TRUE)){install.packages("BiocManager")}' \
-    && R -e 'BiocManager::install("DESeq2")' \
-    && R -e 'BiocManager::install("FactoMineR")'
+    && R -e 'BiocManager::install("DESeq2")'
 
 ENTRYPOINT ["/usr/bin/R"]
