--- a/nextflow.config
+++ b/nextflow.config
@@ -41,7 +41,7 @@ process {
     }
     
     withName: 'stat_analysis' {
-        container = 'siwarhm/dseq2:latest'
+        container = 'evolbioinfo/deseq2:v1.28.1'
         cpus=4
     }
 
